--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Arvo', Helvetica, Arial, sans-serif;
+}
+
+body {
+    font-family: "Roboto", sans-serif;
+    background-color: white;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.nutrients ul {
+    display: flex;
+    width: 30rem;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+
+}
+
+ul li {
+    list-style: none;
+    justify-content: center;
+}
+
+.meals {
+    display: flex;
+}
+
+img {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+    margin: 0 1rem;
+    max-width: 40rem;
+    box-shadow: 0 4px 8px 2px rgba(77, 77, 77, 0.15);
+}
+
+.meal-instructions {
+     font-size: 1rem;
+     margin-bottom: 1rem;
+}
+
+a {
+    color: black;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+section {
+    margin: 2rem 0 1rem 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.controls {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input {
+    text-align: center;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+    padding: 0.5rem 1rem;
+    background-color: rgb(36, 61, 199);
+    color: white;
+    border: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1rem;
+}
+button:hover {
+    cursor: pointer;
+    background-color: rgb(36, 61, 150);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media only screen and (max-width: 550px) {
+    .meals {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+.header-main {
+    font-size: 4rem;
+    color: rgb(23, 23, 209);
+}
+
+.quote {
+    padding: 1.5rem;
+    margin-top: 3rem;
+    box-shadow: 0 4px 8px 2px rgba(77, 77, 77, 0.15);
+}
+
+.quote-text {
+    font-size: 2rem;
+}
+
+.blurb {
+    padding: 3rem;
 }
